--- a/src/main/resources/templates/program/apply.html
+++ b/src/main/resources/templates/program/apply.html
@@ -65,9 +65,10 @@
 					<th>가격</th>
 
 					<td>
-						<span>₩<span th:text="${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span> x 5박</span>
+						<span>₩<span th:text="${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span>
+						<span class="x-night" th:text="${days}">x0박</span></span>
 						<span> = </span>
-						<span class="price-total">₩<span th:text="${#numbers.formatDecimal(program.price * 5, 0, 'COMMA', 0, 'POINT')}"></span></span>
+						<span class="price-total">₩<span class="totalPrice" th:text="${totalPrice}">0</span></span>
 					</td>
 				</tr>
 				<tr>
@@ -78,7 +79,8 @@
 			<input type="hidden" name="start_date" th:value="${start_date}">
 			<input type="hidden" name="end_date" th:value="${end_date}">
 			<input type="hidden" name="programNum" th:value="${program != null ? program.programNum : ''}" />
-			<input type="hidden" name="totalPrice" th:value="${program.price}">
+			<input type="hidden" name="totalPrice" th:value="${totalPrice}">
+			<input type="hidden" name="days" th:value="${days}">
 
 			<div class="right-align">
 				<button type="submit" >예약하기</button>
@@ -90,6 +92,7 @@
 </main>
 
 <footer th:replace="layouts/footer::footer"></footer>
+ 
 
 </body>
 </html>
