--- a/src/main/resources/templates/program/detail.html
+++ b/src/main/resources/templates/program/detail.html
@@ -40,6 +40,7 @@
 					<div class="like-bookmark-wrapper">
 						<input name="like" th:value="${program_like}" hidden="hidden"></input>
 						<input name="bookmark" th:value="${program_bookmark}" hidden="hidden"></input>
+						<input name="price" th:value="${program.price}" hidden="hidden"></input>
 
 						<img class="mark clickable" id="like_img" src="/img/mark/unheart.png" alt="unheart" style="width: 20px; height: 20px;">
 						<img class="mark clickable" id="bookmark_img" src="/img/mark/unbookmark.png" alt="unbookmark" style="width: 20px; height: 20px;">
@@ -95,11 +96,11 @@
 			</div>
 
 			<div class="reservation-container">
-				<form th:action="@{/program/apply}" method="get">
+				<form id="myForm" th:action="@{/program/apply}" method="get">
 					<article class="reservation-article">
 						<div class="price-per">
 							<span class="price" th:text="'₩' + ${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span>
-							<span class="per-night"> /박</span>
+							<span class="per-night">/0박</span>
 						</div>
 
 						<br>
@@ -108,35 +109,38 @@
 							<div class="dateinput" id="dateinput"></div>
 
 							<div>
-								<input type="text" autocomplete="off" class="dateinput" id="start_date" name="start_date" placeholder="시작 날짜"></input>
+								<input type="text" autocomplete="off" class="dateinput" id="start_date" name="start_date" placeholder="체크인"></input>
 							</div>
 
 							<div>
-								<input type="text" autocomplete="off" class="dateinput" id="end_date" name="end_date" placeholder="종료 날짜"></input>
+								<input type="text" autocomplete="off" class="dateinput" id="end_date" name="end_date" placeholder="체크아웃"></input>
 							</div>
 						</div>
 
 						<br>
 
 						<div class="button-wrapper">
-							<button type="submit" class="btn-save">예약하기</button>
+							<button type="submit" class="btn-save" onclick="submitForm()">예약하기</button>
 							<input type="hidden" name="programNum" th:value="${program.programNum}">
 						</div>
 
 						<div class="price-sum">
 							<!-- Price per night multiplied by number of nights -->
 							<div class="price-detail">
-								<span>₩<span th:text="${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span> x 5박</span>
-								<span class="price-total">₩<span th:text="${#numbers.formatDecimal(program.price * 5, 0, 'COMMA', 2, 'POINT')}"></span></span>
+								<span>₩<span th:text="${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span>
+								 <span class="x-night" id="daysValue">x0박</span></span>
+								<span class="price-total">₩<span class="totalPrice">0</span></span>
 							</div>
+    			<input type="hidden" name="days" id="hiddenDays" value="">
 
 							<br><hr>
 
 							<!-- Total sum -->
 							<div class="price-detail">
 								<span>총 합계</span>
-								<span class="price-total">₩<span th:text="${#numbers.formatDecimal((program.price * 5) + 143314, 0, 'COMMA', 2, 'POINT')}"></span></span> <!-- Sum of price and fee -->
-							</div>
+								<span class="price-total">₩<span  class="totalPrice" id="totalPrice">0</span></span> <!-- Sum of price and fee -->
+							</div>    			<input type="hidden" name="totalPrice" id="hiddenPrice" value="">
+
 						</div>
 					</article>
 				</form>
@@ -178,6 +182,21 @@
 <footer th:replace="layouts/footer::footer"></footer>
 
 <script th:src="@{/js/script.js}"></script>
+<script>
+	 function submitForm() {
+        // per-night 클래스를 가진 span 요소의 값을 가져옴
+        var daysValue = document.getElementById('daysValue').innerText;
+        var totalPrice = document.getElementById('totalPrice').innerText;
 
+        // 가져온 값을 hidden input에 설정
+        document.getElementById('hiddenDays').value = daysValue;
+        document.getElementById('hiddenPrice').value = totalPrice;
+
+        document.getElementById('myForm').submit();
+
+    }
+</script>
+</script>
+ 
 </body>
 </html>
