프로그램을 홈스테이로

--- a/src/main/resources/templates/program/list.html
+++ b/src/main/resources/templates/program/list.html
@@ -60,7 +60,7 @@
                     <!-- Program Tag Selection -->
                     <div class="program-tag-container" id="tagSection" style="display:none;">
                         <br>
-                        <label><b>프로그램 태그</b></label>
+                        <label><b>홈스테이 태그</b></label>
                         <div>
                             <input type="checkbox" name="active" value="1" th:checked="${programTag.active} == 1"><label>활동적</label>
                             <input type="checkbox" name="creative" value="1" th:checked="${programTag.creative} == 1"><label>창의적</label>
