--- a/src/main/resources/templates/member/myReservation.html
+++ b/src/main/resources/templates/member/myReservation.html
@@ -63,11 +63,11 @@
 						<span th:switch="${myReservation.status}">
 							<p th:case="0">예약이 확인 대기 중입니다.</p>
 							<p th:case="1">예약이 확인되었습니다.</p>
-							<p th:case="2">프로그램 종료<br><br> <a
+							<p th:case="2">홈스테이 종료<br><br> <a
 									th:href="@{/program/hostReview(reserNum=${myReservation.reserNum})}"
 									class="btn btn-primary">호스트 리뷰</a>
 								<a th:href="@{/program/programReview(reserNum=${myReservation.reserNum})}"
-									class="btn btn-primary">프로그램 리뷰</a>
+									class="btn btn-primary">홈스테이 리뷰</a>
 							</p>
 							<p th:case="*">오류</p>
 						</span>
@@ -80,7 +80,7 @@
 
 
 
-	<!--<a th:href="@{/program/programReview(reserNum=${myReservation.reserNum})}" th:text="프로그램리뷰"></a> 
+	<!--<a th:href="@{/program/programReview(reserNum=${myReservation.reserNum})}" th:text="홈스테이리뷰"></a>
 <a th:href="@{/program/hostReview(reserNum=${myReservation.reserNum})}" th:text="호스트리뷰"></a> 
 
  <h3>내 게스트 리뷰</h3>
