--- a/src/main/resources/templates/program/programReview.html
+++ b/src/main/resources/templates/program/programReview.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1">
  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-<title>프로그램 리뷰</title>
+<title>홈스테이 리뷰</title>
 
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 <link rel="stylesheet" th:href="@{/css/main/reviewWrite.css}">
@@ -22,7 +22,7 @@
 </style>
 </head>
 <body>
-<h3 id="title">프로그램에 대한 후기를 작성해주세요!</h3>
+<h3 id="title">홈스테이에 대한 후기를 작성해주세요!</h3>
 <form th:action="@{/program/programReview}" method="post" enctype="multipart/form-data">
         <div>
             <input type="text" id="title" name="stars" placeholder="별점">
