--- a/src/main/resources/templates/member/myProgram.html
+++ b/src/main/resources/templates/member/myProgram.html
@@ -36,6 +36,7 @@
 			/*  flex: 1;각 박스가 동일한 너비를 가지도록 */
 			margin: 10px;
 			width: 30%;
+			 
 
 		}
 
@@ -113,9 +114,9 @@
 		<div class="card" style="width: 18rem;" th:each="program: ${programList}">
 			<a th:href="@{/program/detail(programNum=${program.programNum})}"
 				style="text-decoration: none; color: inherit;">
-				<img th:src="@{/img/board/img_3.png}" class="card-img-top" alt="...">
+                        <img th:src="${program.imagePath1}" alt="이미지1" style="width: 100%; height: 200px; object-fit: cover; border-top-left-radius: 5px; border-top-right-radius: 5px;">
 				<div class="card-body" style="display: flex; justify-content: space-between; align-items: center;">
-					<h5 th:text="${program.title}"></h5>
+					<h5 th:text="${program.title}" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 16px;"></h5>
 				</div>
 			</a>
 		</div>
