--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,8 +22,9 @@
 
 <!-- 헤더 섹션-->
 <header th:replace="layouts/header::header"></header>
+
 <!-- 채팅방 살려죠 -->
-<form action="/chat/createRoom" method="post">
+<!--<form action="/chat/createRoom" method="post">
     <input type="text" name="name" placeholder="채팅방 이름">
     <button type="submit">방 만들기</button>
 </form>
@@ -35,39 +36,17 @@
                th:text="${room.name}"></a>
         </td>
     </tr>
-</table>
+</table>-->
 
-<!--구글사이트번역-->
-<div id="google_translate_element" class="hd_lang"
-     style="float: right;position: relative;top: -4px;margin-left: 10px;"></div>
+<section class="video-section">
+    <video autoplay loop muted>
+        <source src="/video/kyong_bok.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+    </video>
+</section>
 
 <main>
-    <section class="board-container">
-        <div class="board-title">
-            <h2>커뮤니티 인기 게시글</h2>
-            <div class="add_link"><a th:href="@{/board/boardList}">더보기</a></div>
-        </div>
-
-        <div class="pBoard-container">
-            <article class="pBoard-article" th:each="popularBoard : ${popularBoards}">
-                <div class="image-container">
-                    <div class="image-wrapper">
-                        <img th:src="${popularBoard.imagePath1}" alt="이미지1">
-                    </div>
-                </div>
-
-                <div class="image-container-sub board-to-detail clickable"
-                     th:data-boardnum="${popularBoard.boardnum}">
-                    <h4 th:text="${popularBoard.title}">게시판</h4>
-                </div>
-            </article>
-        </div>
-    </section>
-
     <br><br>
-    <hr>
-    <br><br>
-
     <section class="search-section">
         <div class="header-container header-bottom">
             <div class="search-bar">
@@ -158,6 +137,32 @@
                         <a class="tag clickable">#태그2</a>
                     </div>
                     <p><span>₩<span th:text="${#numbers.formatDecimal(popular.price, 0, 'COMMA', 0, 'POINT')}"></p>
+                </div>
+            </article>
+        </div>
+    </section>
+
+    <br><br>
+    <hr>
+    <br><br>
+
+    <section class="board-container">
+        <div class="board-title">
+            <h2>커뮤니티 인기 게시글</h2>
+            <div class="add_link"><a th:href="@{/board/boardList}">더보기</a></div>
+        </div>
+
+        <div class="pBoard-container">
+            <article class="pBoard-article" th:each="popularBoard : ${popularBoards}">
+                <div class="image-container">
+                    <div class="image-wrapper">
+                        <img th:src="${popularBoard.imagePath1}" alt="이미지1">
+                    </div>
+                </div>
+
+                <div class="image-container-sub board-to-detail clickable"
+                     th:data-boardnum="${popularBoard.boardnum}">
+                    <h3 th:text="${popularBoard.title}">게시판</h3>
                 </div>
             </article>
         </div>
