--- a/src/main/resources/templates/member/myReservation.html
+++ b/src/main/resources/templates/member/myReservation.html
@@ -52,7 +52,7 @@
 	<h3 id="title">내가 신청한 홈스테이</h3>
 	<div class="container">
 		<div class="card" style="width: 18rem;" th:each="myReservation: ${myReservation}">
-			<img th:src="@{/img/board/img_3.png}" class="card-img-top" alt="...">
+                <img th:src="${myReservation.imagePath1}" alt="이미지1" style="width: 100%; height: 200px; object-fit: cover; border-top-left-radius: 5px; border-top-right-radius: 5px;">
 			<div class="card-body">
 
 				<ul class="list-group list-group-flush">
