사진 추가 테스트

--- a/src/main/resources/static/css/main/home.css
+++ b/src/main/resources/static/css/main/home.css
@@ -133,3 +133,12 @@
     left: 50%;
     transform: translate(-50%, -50%); /* 비디오를 섹션 중앙에 정렬 */
 }
+
+.image-background-section {
+    background-image: url('/img/home/bottom_img.png'); /* 배경 이미지 설정 */
+    background-size: cover; /* 이미지가 섹션을 완전히 덮도록 설정 */
+    background-position: center; /* 이미지가 센터에 위치하도록 설정 */
+    background-repeat: no-repeat; /* 이미지 반복 방지 */
+    height: 400px; /* 섹션의 높이 설정, 필요에 따라 조정 */
+    /* 추가적인 스타일링 요소 */
+}
