--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -173,6 +173,9 @@
     </section>
 </main>
 
+<section class="image-background-section">
+</section>
+
 <footer th:replace="layouts/footer::footer"></footer>
 
 <script>
