--- a/src/main/resources/templates/member/myBookmark.html
+++ b/src/main/resources/templates/member/myBookmark.html
@@ -73,7 +73,7 @@
 				style="text-decoration: none; color: inherit;">
                 <img th:src="${program.imagePath1}" alt="이미지1" style="width: 100%; height: 200px; object-fit: cover; border-top-left-radius: 5px; border-top-right-radius: 5px;">
 				<div class="card-body" style="display: flex; justify-content: space-between; align-items: center;">
-					<h5 th:text="${program.title}"></h5>
+					<h5 th:text="${program.title}" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 16px;"></h5>
 				</div>
 			</a>
 		</div>
