--- a/src/main/resources/templates/program/accept.html
+++ b/src/main/resources/templates/program/accept.html
@@ -62,11 +62,11 @@
 			<h2>예약정보(체크리스트추가?)</h2>
 			<hr>
 
-				<div style="width: 18rem; background-color: transparent;
-						border: 1.5px solid #cfcfc6; border-radius: 10q; padding: 5px; display: inline-block;  " id="item">
-					<img th:src="@{/img/board/img_3.png}" class="card-img-top" alt="...">
+				<div class="card" style="width: 18rem;background-color: transparent;
+						border: 1.5px solid #cfcfc6; border-radius: 10q;  display: inline-block;  " id="item">
+                <img th:src="${program.imagePath1}" alt="이미지1" style="width: 100%; height: 200px; object-fit: cover; border-top-left-radius: 5px; border-top-right-radius: 5px;">
 					<div class="card-body">
-						<p class="card-text" th:text="${program.title}"> </p>
+						<p class="card-text" th:text="${program.title}" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: 16px;"> </p>
 					</div>
 				</div>
 
