--- a/src/main/resources/templates/program/accept.html
+++ b/src/main/resources/templates/program/accept.html
@@ -59,7 +59,7 @@
 	<div class="container">
 		<form th:action="@{/program/accept}" method="post">
 
-			<h2>예약정보(체크리스트추가?)</h2>
+			<h2>예약정보</h2>
 			<hr>
 
 				<div style="width: 18rem; background-color: transparent;
