--- a/src/main/resources/templates/program/request.html
+++ b/src/main/resources/templates/program/request.html
@@ -68,7 +68,7 @@
 	<header th:replace="layouts/header::header"></header>
 
 	<div class="container">
-		<h3>예약현황(리뷰작성칸넣기)</h3>
+<h3><strong>예약현황</strong></h3>
 		<hr>
 
 		<table>
@@ -88,8 +88,7 @@
 					<p th:case="0">대기 중
 						<a th:href="@{/program/accept(reserNum=${reservation.reserNum})}" th:text="수락"
 							class="btn btn-primary"></a>
-						<a th:href="@{/program/guestReview(reserNum=${reservation.reserNum})}"
-							th:text="'게스트 리뷰작성'" class="btn btn-primary"></a>
+						 
 					</p>
 					<p th:case="1">예약 확정</p>
 					<p th:case="2">종료
