--- a/src/main/resources/templates/program/programReview.html
+++ b/src/main/resources/templates/program/programReview.html
@@ -31,9 +31,9 @@
 <h2 id="title">홈스테이에 대한 후기를 작성해주세요!</h2>
 <div class="container" >
 <div class="items" style="width: 18rem;">
-  <img th:src="@{/img/board/img_3.png}" class="card-img-top" alt="...">
+  <img th:src="${program.imagePath1}" alt="이미지1" style="width: 100%; height: 200px; object-fit: cover; border-radius: 5px; ">
   <div class="card-body" >  
-    <h5 class="card-title" th:text="${program.title}">Card title</h5>
+	<h5 th:text="${program.title}" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis; font-size: px;"></h5>
  </div>
 </div>
 <div class="items" style="margin-top: 40px;">
