디테일에 리뷰

--- a/src/main/resources/templates/member/myProgram.html
+++ b/src/main/resources/templates/member/myProgram.html
@@ -62,10 +62,7 @@
 
 		}
 
-		.review-item-wrapper {
-			 
-			background-color: red;
-		}
+		 
 
 		
 	</style>
@@ -106,7 +103,7 @@
 
 	<br><br>
 	<div style="display: flex; 	justify-content: space-between;">
-		<h4 id="title">운영 중인 숙소</h4>
+		<h4 id="title">운영 중인 홈스테이</h4>
 		<button type="button" class="btn btn-primary" th:onclick="|location.href='@{/program/request}'|">
 			예약현황</button>
 	</div>
