--- a/src/main/resources/templates/member/joinForm.html
+++ b/src/main/resources/templates/member/joinForm.html
@@ -238,7 +238,7 @@ function uploadAndPreview() {
                    <input type="button" onclick="address()" value="우편번호 찾기"><br>
                    <input type="text" name="address_address" id="address_address" placeholder="주소"><br>
                    <input type="text" name="address_detailAddress" id="address_detailAddress" placeholder="상세주소">
-                   <input type="text" name="address_extraAddress" id="address_extraAddress" placeholder="참고항목">
+                   <input type="text" name="address_extraAddress" id="address_extraAddress" placeholder="참고항목" readonly>
                 </td>
              </tr>
              <tr>
