프로필사진 수정 (수정하면 로그인 안됨)

--- a/src/main/resources/templates/member/updateForm.html
+++ b/src/main/resources/templates/member/updateForm.html
@@ -281,7 +281,7 @@ window.onload = function() {
                   <td>
                      <input type="file" name="upload" id="fileInput" onchange="updateProfilePicture()" accept="image/*">
                       <br>
-                      <img id="preview" src="#" alt="Preview" style="max-width: 170px; max-height: 170px;">
+                      <!--<img id="preview" src="#" alt="Preview" style="max-width: 170px; max-height: 170px;">-->
                   </td>
          </tr>
           <tr>
