--- a/src/main/resources/templates/board/readForm.html
+++ b/src/main/resources/templates/board/readForm.html
@@ -33,7 +33,8 @@
             <input type="hidden" name="boardnum" th:value="${board.boardnum}"></input>
 
             <input type="hidden" name="recommend" th:value="${board.recommend}"></input>
-            <img class="mark clickable" id="recommend_img" src="/img/mark/unheart.png" alt="unheart" style="width: 20px; height: 20px;"><span id="cnt" th:text="${board.recommend}"></span>
+            <img class="mark clickable" id="recommend_img" src="/img/mark/unheart.png" alt="unheart" style="width: 20px; height: 20px;">
+            <!--<span id="cnt" th:text="${board.recommend}"></span>--><!--ajax로 데이터 가져오는게 필요-->
         </div>
     </div>
 
