게시글 작성 시 체크리스트 정리(2줄 정도?)

--- a/src/main/resources/templates/program/write.html
+++ b/src/main/resources/templates/program/write.html
@@ -77,9 +77,8 @@
         <hr>
 
         <div class="checklist-container">
-            <!-- 홈스테이 테마 태그 -->
-            <div>
-                <h3>홈스테이 테마</h3>
+            <h3>홈스테이 테마</h3>
+            <div class="two-column-checklist">
                 <label><input type="checkbox" name="active" value="1">활동적</label>
                 <label><input type="checkbox" name="creative" value="1">창의적</label>
                 <label><input type="checkbox" name="healing" value="1">힐링</label>
@@ -96,9 +95,8 @@
 
             <hr>
 
-            <!-- 호스트용 체크리스트 -->
-            <div>
-                <h3>호스트용 체크리스트</h3>
+            <h3>호스트용 체크리스트</h3>
+            <div class="two-column-checklist">
                 <label><input type="checkbox" name="separateBathroom" value="1">화장실</label>
                 <label><input type="checkbox" name="bathtub" value="1">욕조</label>
                 <label><input type="checkbox" name="wifi" value="1">와이파이</label>
