--- a/src/main/resources/templates/board/writeForm.html
+++ b/src/main/resources/templates/board/writeForm.html
@@ -49,11 +49,9 @@
 		</div>
 
 		<br>
-		<div class="button-right">
-			<button type="submit">작성</button>
-		</div>
-		<div class="button-right">
-			<button type="submit">취소</button>
+		<div class="right-align">
+			<button type="submit" class="btn-save">작성</button>
+			<button type="reset" class="btn-cancel">취소</button>
 		</div>
 	</form>
 </main>
