--- a/src/main/resources/templates/board/writeForm.html
+++ b/src/main/resources/templates/board/writeForm.html
@@ -53,6 +53,16 @@
 			<button type="submit" class="btn-save">작성</button>
 			<button type="reset" class="btn-cancel">취소</button>
 		</div>
+
+		<!-- 게시글 작성 뒤로가기 함수 -->
+		<!--<script>
+			function goBack() {
+                // history 객체의 back 메서드 호출
+                window.history.back();
+            }
+		</script>-->
+		<!-- 게시글 작성 뒤로가기 버튼 -->
+		<!--<button onclick="goBack()">뒤로 가기</button>-->
 	</form>
 </main>
 
