가격 계산 수정

--- a/src/main/resources/templates/program/detail.html
+++ b/src/main/resources/templates/program/detail.html
@@ -134,7 +134,7 @@
 							<div class="price-per">
 								<span class="price"
 									th:text="'₩' + ${#numbers.formatDecimal(program.price, 0, 'COMMA', 0, 'POINT')}"></span>
-								<span class="per-night">/0박</span>
+								<span>/1박</span> <span class="per-night"></span>
 							</div>
 
 							<br>
