--- a/src/main/resources/templates/program/payment.html
+++ b/src/main/resources/templates/program/payment.html
@@ -100,7 +100,10 @@
 				<button type="submit">결제하기</button>
 			</div>
 		</form>
-		<form method="post" action="/kakaoPay">
+
+		<br><br>
+
+		<form class="right-align" method="post" action="/kakaoPay">
 			<button>카카오페이로 결제하기</button>
 		</form>
 
