예약정보 수락시 이미지 확인

--- a/src/main/resources/static/css/main/detail.css
+++ b/src/main/resources/static/css/main/detail.css
@@ -115,3 +115,61 @@ input[type="text"] {
     margin-right: 5px;
 }
 
+.reply-form {
+    display: flex;
+    justify-content: space-between;
+}
+
+/* 테이블 전체 스타일 */
+.reply {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+}
+
+/* 테이블 헤더 및 행 스타일 */
+.reply th, .reply td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+/* 테이블 열 스타일 */
+.reply td.replyid {
+    width: 20%;
+}
+
+.reply td.content {
+    width: 50%;
+}
+
+.reply td.replydate {
+    width: 20%;
+}
+
+/* "삭제" 버튼 스타일 */
+.reply input[type="button"] {
+    background-color: #f44336; /* 빨간색 */
+    color: white;
+    border: none;
+    cursor: pointer;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border-radius: 5px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+}
+
+.reply input[type="button"]:hover {
+    background-color: #d32f2f; /* 버튼 호버 시 더 어두운 빨간색 */
+}
+
+/* 반응형 디자인 */
+@media screen and (max-width: 600px) {
+    .reply td.replyid, .reply td.replydate {
+        display: none; /* 화면이 작을 때 ID와 날짜 숨김 */
+    }
+}
