--- a/src/main/resources/templates/messenger/simpleChat.html
+++ b/src/main/resources/templates/messenger/simpleChat.html
@@ -24,12 +24,22 @@
     function connect() {
         var socket = new SockJS('/chat');
         stompClient = Stomp.over(socket);
-        stompClient.connect({}, function (frame) {
-            console.log('Connected: ' + frame);
-            stompClient.subscribe('/topic/messages', function (message) {
-                showMessage(JSON.parse(message.body).content);
-            });
-        });
+        stompClient.connect({}, 
+            function (frame) {
+                console.log('Connected: ' + frame);
+                stompClient.subscribe('/topic/messages', function (message) {
+                    try {
+                        var parsedMessage = JSON.parse(message.body);
+                        showMessage(parsedMessage.content);
+                    } catch (e) {
+                        console.error('Error parsing JSON message:', message.body);
+                    }
+                });
+            },
+            function (error) {
+                console.log('Connection error: ' + error);
+            }
+        );
     }
 
     function sendMessage() {
@@ -39,6 +49,7 @@
     }
 
     function showMessage(message) {
+        console.log(message);
         var messagesDiv = document.getElementById('messages');
         var messageParagraph = document.createElement('p');
         messageParagraph.appendChild(document.createTextNode(message));
